{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 116,
  "lineage": "9fc8fc44-aab1-cb27-d1ef-4f055cd43782",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:loadbalancer/app/alb/916308c8d359f48c",
            "arn_suffix": "app/alb/916308c8d359f48c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1110002607.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:loadbalancer/app/alb/916308c8d359f48c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-038837603224f9ecd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b8894abb90e6a9e"
              },
              {
                "subnet_id": "subnet-08d984b93bd8b410c"
              }
            ],
            "subnets": [
              "subnet-01b8894abb90e6a9e",
              "subnet-08d984b93bd8b410c"
            ],
            "tags": {
              "Name": "app-alb"
            },
            "tags_all": {
              "Name": "app-alb"
            },
            "vpc_id": "vpc-063b0f1fd32512777",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:loadbalancer/app/alb/916308c8d359f48c"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a72bffcdbe3e576a",
            "arn": "arn:aws:ec2:ap-south-1:772000391462:elastic-ip/eipalloc-0a72bffcdbe3e576a",
            "association_id": "eipassoc-0faffe59e88567228",
            "domain": "vpc",
            "id": "eipalloc-0a72bffcdbe3e576a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a6a06fb4424f822d",
            "private_dns": "ip-10-0-0-174.ap-south-1.compute.internal",
            "private_ip": "10.0.0.174",
            "public_dns": "ec2-3-109-15-246.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.15.246",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "ElasticIP"
            },
            "tags_all": {
              "Name": "ElasticIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:internet-gateway/igw-04e0511e6d0c1f9b2",
            "id": "igw-04e0511e6d0c1f9b2",
            "owner_id": "772000391462",
            "region": "ap-south-1",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:listener/app/alb/916308c8d359f48c/a04da83bffd7b362",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:targetgroup/alb-tg/2ff220e2664c07e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:listener/app/alb/916308c8d359f48c/a04da83bffd7b362",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:loadbalancer/app/alb/916308c8d359f48c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:listener/app/alb/916308c8d359f48c/a04da83bffd7b362"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:targetgroup/alb-tg/2ff220e2664c07e5",
            "arn_suffix": "targetgroup/alb-tg/2ff220e2664c07e5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:targetgroup/alb-tg/2ff220e2664c07e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alb-tg"
            },
            "tags_all": {
              "Name": "alb-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:772000391462:targetgroup/alb-tg/2ff220e2664c07e5"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a72bffcdbe3e576a",
            "association_id": "eipassoc-0faffe59e88567228",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a04924b26c56db5a",
            "network_interface_id": "eni-0a6a06fb4424f822d",
            "private_ip": "10.0.0.174",
            "public_ip": "3.109.15.246",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b8894abb90e6a9e",
            "tags": {
              "Name": "Nat-gateway"
            },
            "tags_all": {
              "Name": "Nat-gateway"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DB_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:route-table/rtb-03dfec96d3388b170",
            "id": "rtb-03dfec96d3388b170",
            "owner_id": "772000391462",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "DB-rt"
            },
            "tags_all": {
              "Name": "DB-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "rtb-03dfec96d3388b170",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:route-table/rtb-029eef267fdb0b17e",
            "id": "rtb-029eef267fdb0b17e",
            "owner_id": "772000391462",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a04924b26c56db5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-rt"
            },
            "tags_all": {
              "Name": "Private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "rtb-029eef267fdb0b17e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgtw",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:route-table/rtb-0783daef5cc193ec1",
            "id": "rtb-0783daef5cc193ec1",
            "owner_id": "772000391462",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e0511e6d0c1f9b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "rtb-0783daef5cc193ec1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DB_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088e91f658dda9309",
            "region": "ap-south-1",
            "route_table_id": "rtb-03dfec96d3388b170",
            "subnet_id": "subnet-072c505caa9ddb978"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.DB_subnet_rt",
            "aws_subnet.private_db",
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb9e903a7528da3",
            "region": "ap-south-1",
            "route_table_id": "rtb-03dfec96d3388b170",
            "subnet_id": "subnet-0575e995094a6f001"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.DB_subnet_rt",
            "aws_subnet.private_db",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce035db73cfd23b",
            "region": "ap-south-1",
            "route_table_id": "rtb-029eef267fdb0b17e",
            "subnet_id": "subnet-04621e259fc60f0c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgtw",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016db9ddb507f960e",
            "region": "ap-south-1",
            "route_table_id": "rtb-029eef267fdb0b17e",
            "subnet_id": "subnet-0e673e9189ef09b6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgtw",
            "aws_route_table.private_subnet_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6b66bb746a549b2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0783daef5cc193ec1",
            "subnet_id": "subnet-01b8894abb90e6a9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09441a482100f67f2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0783daef5cc193ec1",
            "subnet_id": "subnet-08d984b93bd8b410c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:security-group/sg-09d0d5fb36120e55f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0d5fb36120e55f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038837603224f9ecd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ec2-sg",
            "name_prefix": "",
            "owner_id": "772000391462",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "sg-09d0d5fb36120e55f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:security-group/sg-038837603224f9ecd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038837603224f9ecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "772000391462",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "sg-038837603224f9ecd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:security-group/sg-08f431692e44c00ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f431692e44c00ce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from App",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d0d5fb36120e55f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "772000391462",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "sg-08f431692e44c00ce",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.Ec2-sg",
            "aws_security_group.alb",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-04621e259fc60f0c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04621e259fc60f0c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private subnet 1"
            },
            "tags_all": {
              "Name": "Private subnet 1"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-04621e259fc60f0c1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-0e673e9189ef09b6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e673e9189ef09b6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private subnet 2"
            },
            "tags_all": {
              "Name": "Private subnet 2"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-0e673e9189ef09b6d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-072c505caa9ddb978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072c505caa9ddb978",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private db subnet 1"
            },
            "tags_all": {
              "Name": "private db subnet 1"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-072c505caa9ddb978",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-0575e995094a6f001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575e995094a6f001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private db subnet 2"
            },
            "tags_all": {
              "Name": "private db subnet 2"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-0575e995094a6f001",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-01b8894abb90e6a9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b8894abb90e6a9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public subnet 1"
            },
            "tags_all": {
              "Name": "public subnet 1"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-01b8894abb90e6a9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:subnet/subnet-08d984b93bd8b410c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d984b93bd8b410c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "772000391462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public subnet 2"
            },
            "tags_all": {
              "Name": "public subnet 2"
            },
            "vpc_id": "vpc-063b0f1fd32512777"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "subnet-08d984b93bd8b410c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772000391462:vpc/vpc-063b0f1fd32512777",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049fd9e73f2d011ab",
            "default_route_table_id": "rtb-088980b63fe18c0ba",
            "default_security_group_id": "sg-06dd6849eedfeacd7",
            "dhcp_options_id": "dopt-0b38aa86c17d40292",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063b0f1fd32512777",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088980b63fe18c0ba",
            "owner_id": "772000391462",
            "region": "ap-south-1",
            "tags": {
              "Name": "aws-3tier-vpc"
            },
            "tags_all": {
              "Name": "aws-3tier-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "772000391462",
            "id": "vpc-063b0f1fd32512777",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}